2004-01-10  Paolo Nenzi <p.nenzi@ieee.org>

	*   configure.in 
	    src/xspice/cmpp/Makefile src/xspice/cmpp/Makefile.in:
	    Make configure automatically set paths for lex yacc and 
	    install dir (Stefan Jones <stefan.jones@multigig.com>).

	*  src/Makefile.am Makefile.am README.Tcl
	   src/xspice/README src/xspice/icm/README
	   src/xspice/icm/spice2poly/icm_spice2poly/README:
	   Updated to reflect codemodel support is now complete
	   (Stefan Jones <stefan.jones@multigig.com>).

	*  src/xspice/ipc/ipc.c:
	   Remove linux specific includes which are not needed
	   (Stefan Jones <stefan.jones@multigig.com>).

	*  src/xspice/{Makefile.am,xspice.c} 
	   src/xspice/cm/{cmexport.c,Makefile.am}:
	   Moved the xspice library hooks into the cm directory
	   (Stefan Jones <stefan.jones@multigig.com>).

	*  src/xspice/enh/enhtrans.c src/xspice/mif/mif_inp2.c:
	   Fixed version from Stuart Brorson <sdb@cloud9.net>, 
	   http://www.brorson.com/gEDA/ngspice/

	*  src/spinit, arc/spinit.in, configure.in: parametrized spinit paths
	   for codemodel devices.

	*  src/Makefile.am, src/ngspice.idx: removed ngspice.idx
	   and make it auto-generated and installed 
	   (Stefan Jones <stefan.jones@multigig.com>).

	*  src/frontend/aspice.c: Added #ifdef for SOLARIS.

	*  src/include/cktdefs.h: added prototype for NInzIter().

	*  src/spicelib/devices/cpl/*: Added CPLask and CPLmAsk functions to
	   access device's internals. Added CPLunsetup function to allow
	   for multiple simulations.
	   
	*  DEVICES: updated with cpl changes.       

2003-12-31  Paolo Nenzi <p.nenzi@ieee.org>

        *  src/spicelib/devices/tra/*: Cleaned code.
	
	*  src/spicelib/devices/ltra/*: Cleaned code.
	
	*  src/spicelib/devices/urc/*: Cleaned code.

        *  tests/transmission/{cpl*, txl*, ibm*}: Added test files for the
	   kspice's cpl and txl devices. 
	
	*  src/spicelib/devices/cpl/*: Cleaned the cpl code.
	
	*  src/spicelib/devices/txl/*: Cleaned the txl code.
	